--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Front-End News</title>
 		<meta charset='UTF-8' />
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="normalize.css" />
 
 	</head>
 	<body>
@@ -35,7 +35,7 @@
 				</li>
 				<li>
 					<a href="#">
-						<h3 class="news-link">Estimating A Front End Wen Dev Job</h3>
+						<h3 class="news-link">Estimating A Front End Web Dev Job</h3>
 					</a>						
 				</li>
 				<li>
