add header style

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<title>Front-End News</title>
 		<meta charset='UTF-8' />
 		<link rel="stylesheet" href="normalize.css" />
+		<link rel="stylesheet" href="main.css"/>
 
 	</head>
 	<body>
-		<header>
-			<h1 class="top-head">FRONT-END NEWS!</h1>
+		<header class="top-head">
+			<p class="logo">FRONT-END NEWS!</p>
 		</header>
 		<main class="main">
 			<h2 class="second-head">Latest News</h3>
