Add li class and a class

--- a/index.html
+++ b/index.html
@@ -12,61 +12,61 @@
 			<p class="logo">FRONT-END NEWS!</p>
 		</header>
 		<main class="main">
-			<h2 class="second-head">Latest News</h3>
+			<h2 class="second-head">Latest News</h2>
 			
 
 			<p>The latest links in the front-end community.</p><a href="#">Add a link now!</a>
 			
 
-			<ol class="news-list">
-				<li>
-					<a href="#">
-						<h3 class="news-link">Frontend Design</h3>
+			<ol>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Frontend Design
 					</a>						
 				</li>
-				<li>
+				<li class="news-item">
 					<a href="#">
-						<h3 class="news-link">Getting Ready For HTTP/2</h3>
+						Getting Ready For HTTP/2
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">Managing Typograhpy on Large Apps</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Managing Typograhpy on Large Apps
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">Estimating A Front End Web Dev Job</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Estimating A Front End Web Dev Job 
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">The One CSS Feature I Really Want</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						The One CSS Feature I Really Want 	
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">Creating COntent Wirefreams for Responsive Design</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Creating COntent Wirefreams for Responsive Design
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">An Introduction to PostCSS</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						An Introduction to PostCSS
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">Creating Loading Buttons With SVG and Segment</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Creating Loading Buttons With SVG and Segment
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">Javascript Modules: A Beginner's Guide</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						Javascript Modules: A Beginner's Guide
 					</a>						
 				</li>
-				<li>
-					<a href="#">
-						<h3 class="news-link">React and the Economics of Dynamic Web Interface</h3>
+				<li class="news-item">
+					<a class="news-link" href="#">
+						React and the Economics of Dynamic Web Interface
 					</a>						
 				</li>
 			</ol>
