add style and constrain content

--- a/index.html
+++ b/index.html
@@ -9,68 +9,67 @@
 	</head>
 	<body>
 		<header class="top-head">
-			<p class="logo">FRONT-END NEWS!</p>
+			<div class="container">
+				<p class="logo">FRONT-END NEWS!</p>
+			</div>
 		</header>
-		<main class="main">
-			<h2 class="second-head">Latest News</h2>
-			
+		<main class="main-content">
+			<div class="container">
 
-			<p>The latest links in the front-end community.</p><a href="#">Add a link now!</a>
-			
-
-			<ol>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Frontend Design
-					</a>						
-				</li>
-				<li class="news-item">
-					<a href="#">
-						Getting Ready For HTTP/2
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Managing Typograhpy on Large Apps
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Estimating A Front End Web Dev Job 
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						The One CSS Feature I Really Want 	
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Creating COntent Wirefreams for Responsive Design
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						An Introduction to PostCSS
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Creating Loading Buttons With SVG and Segment
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						Javascript Modules: A Beginner's Guide
-					</a>						
-				</li>
-				<li class="news-item">
-					<a class="news-link" href="#">
-						React and the Economics of Dynamic Web Interface
-					</a>						
-				</li>
-			</ol>
-
+				<ol>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Frontend Design
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Getting Ready For HTTP/2
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Managing Typograhpy on Large Apps
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Estimating A Front End Web Dev Job 
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							The One CSS Feature I Really Want 	
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Creating Content Wirefreams for Responsive Design
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							An Introduction to PostCSS
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Creating Loading Buttons With SVG and Segment
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							Javascript Modules: A Beginner's Guide
+						</a>						
+					</li>
+					<li class="news-item">
+						<a class="news-link" href="#">
+							React and the Economics of Dynamic Web Interface
+						</a>						
+					</li>
+				</ol>
+				
+			</div>
 		</main>
 
 	</body>
