add subheader and posted by

--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 	<body>
 		<header class="top-head">
 			<div class="container">
-				<p class="logo">FRONT-END NEWS!</p>
+				<h1 class="logo">FRONT-END NEWS!</h1>
 			</div>
 		</header>
+
+		<section class="sub-head">
+			<div class="container">
+				<h2 class="intro">Latest News</h2>
+				<h4 class="description">The latest links in the front-end community.</h4>
+				<a class="add-link" href="#">Add a link now!</a>
+			</div>
+		</section>
+		
 		<main class="main-content">
 			<div class="container">
 
@@ -20,55 +29,102 @@
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Frontend Design
-						</a>						
+						</a>	
+						<h5 class="posted">Posted by:</h5>	
+						<a class="more" href="#">Michele Trimmer<a>	
+						<a class="more" href="#">2 comments<a>
+						<a class="more" href="#"><a>	
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Getting Ready For HTTP/2
-						</a>						
+						</a>
+						<h5 class="posted">Posted by:</h5>
+						<a class="more" href="#">Joshua Trimmer</a>
+						<a class="more" href="#">5 comments<a>
+						<a class="more" href="#"><a>
 					</li>
+							
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Managing Typograhpy on Large Apps
-						</a>						
+						</a>
+						<h5 class="posted">Posted by:</h5>
+						<a class="more" href="#">John D. Jameson</a>
+						<a class="more" href="#">0 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Estimating A Front End Web Dev Job 
-						</a>						
+						</a>													
+						<h5 class="posted">Posted by:</h5>	
+						<a class="more" href="#">Drew Barontini</a>
+
+						<a class="more" href="#">4 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							The One CSS Feature I Really Want 	
-						</a>						
+						</a>	
+						<h5 class="posted">Posted by:</h5>	
+						<a class="more" href="#">Jean Kaluza</a>	
+
+						<a class="more" href="#">9 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Creating Content Wirefreams for Responsive Design
-						</a>						
+						</a>	
+						<h5 class="posted">Posted by:</h5>
+						<a class="more" href="#">Jordan Wade<a>	
+
+						<a class="more" href="#">1 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							An Introduction to PostCSS
-						</a>						
+						</a>	
+						<h5 class="posted">Posted by:</h5>
+						<a class="more" href="#">John D. Jameson</a>	
+
+						<a class="more" href="#">3 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Creating Loading Buttons With SVG and Segment
-						</a>						
+						</a>
+						<h5 class="posted">Posted by:</h5>	
+						<a class="more" href="#">Sarah Imbert</a>	
+
+						<a class="more" href="#">5 comments<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							Javascript Modules: A Beginner's Guide
-						</a>						
+						</a>
+						<h5 class="posted">Posted by:</h5>					
+						<a class="more" href="#">Dan Denney</a>
+
+						<a class="more" href="#">0 comment<a>
+						<a class="more" href="#"><a>
 					</li>
 					<li class="news-item">
 						<a class="news-link" href="#">
 							React and the Economics of Dynamic Web Interface
-						</a>						
+						</a>	
+						<h5 class="posted">Posted by:</h5>	
+						<a class="more" href="#">Justin Mezzell</a>	
+						<a class="more" href="#">2 comment<a>
+						<a class="more" href="#"><a>
 					</li>
 				</ol>
-				
+
 			</div>
 		</main>
 
