--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
 			</div>
 		</header>
 
+
 		<main class="main-content">
 			<div class="container">
+
+				<header class="sub-header">
+					<h1>Latest News</h1>
+					<p>The latest links in the front-end community.<a href="#">Add a link now!</a></p>
+					<form class="form">
+						<label class="form-label" for="form-link-input">Add a story:</label>
+						<input class="form-input" id="form-link-input" />
+
+				</header>
 
 				<ol>
 					<li class="news-item">
@@ -43,7 +53,7 @@
 					</li>
 							
 					<li class="news-item">
-						<a class="news-link" href="#">Managing Typograhpy on Large Apps</a>
+						<a class="news-link" href="#">Managing Typography on Large Apps</a>
 						
 						<ul class="news-meta">	
 							<li class="news-meta-item"><em>Posted by:</em></li>
